--- a/ratatui-elemental/Cargo.toml
+++ b/ratatui-elemental/Cargo.toml
@@ -15,5 +15,8 @@ derive_more.workspace = true
 crossterm.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
-generational-arena = "0.2.9"
 glam = "0.30.9"
+bytemuck = "1.24.0"
+heapless = { version = "0.9.2", features = ["nightly"] }
+slotmap = "1.1.1"
+thiserror = "2.0.17"
