--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,33 +1,29 @@
 [package]
-name = "ratatui-mana"
-version = "0.1.0"
+name = "mana-tui"
+version = "0.0.1"
 edition = "2024"
+license = "GPL-3.0"
 
 [workspace]
 resolver = "3"
-members = ["ratatui-elemental"]
+members = ["mana-tui-elemental"]
+
+[workspace.lints.clippy]
+pedantic = "warn"
+missing-docs = { level = "deny", priority = 1 }
 
 [workspace.dependencies]
 bon = "3.8.1"
-ratatui = "0.29.0"
-flume = "0.11.1"
+ratatui = "0.30.0"
 smol = "2.0.2"
-slab = "0.4.11"
-smallbox = { version = "0.8.8", features = ["nightly"] }
-smallvec = "1.15.1"
 derive_more = { version = "2.1.0", features = ["full"] }
 crossterm = { version = "0.29.0", features = ["event-stream"] }
 tracing = "0.1.44"
-tracing-subscriber = "0.3.22"
 
 [dependencies]
 bon.workspace = true
 ratatui.workspace = true
-flume.workspace = true
 smol.workspace = true
-slab.workspace = true
-smallbox.workspace = true
-smallvec.workspace = true
 derive_more.workspace = true
 crossterm.workspace = true
 tailcall = "1.0.1"
