--- a/mana-tui-elemental/Cargo.toml
+++ b/mana-tui-elemental/Cargo.toml
@@ -11,9 +11,9 @@ derive_more.workspace = true
 tracing.workspace = true
 glam = "0.30.9"
 hecs = { version = "0.10.5", features = ["macros"] }
-rayon = "1.11.0"
 
 [dev-dependencies]
 crossterm.workspace = true
+mana-tui-macros.workspace = true
 tracing-subscriber = "0.3.22"
 color-eyre = "*"
