--- a/mx/Cargo.toml
+++ b/mx/Cargo.toml
@@ -15,7 +15,7 @@ ratatui.workspace = true
 portable-pty = "0.9.0"
 tui-term = "0.3.0"
 vt100 = "0.16.2"
-tracing-subscriber = "0.3.22"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 flume = { version = "0.12.0", default-features = false }
 tachyonfx = { version = "0.22.0" }
 
