feat(ui): add scrollview support

--- a/mx/mx-cli/Cargo.toml
+++ b/mx/mx-cli/Cargo.toml
@@ -8,7 +8,6 @@ name = "mx"
 path = "src/main.rs"
 
 [dependencies]
-ratatui.workspace = true 
 serde = { version = "1.0.228", features = ["rc"] }
 tracing-serde = "0.2.0"
 tachyonfx = "0.22.0"
@@ -22,6 +21,10 @@ anyhow = "1.0.100"
 cargo_metadata = "0.23.1"
 flume = { version = "0.12.0", default-features = false }
 notify = "8.2.0"
+
+[dependencies.ratatui]
+workspace = true
+features = ["scrolling-regions"]
 
 [dependencies.escargot]
 version = "0.5.15"
